--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -218,3 +218,9 @@ pre[class*="language-"] {
   background-color: white;
   opacity: 0.8; /* Make it more visible */
 }
+
+html, body {
+  min-height: 100%;
+  height: 100%;
+  background-color: #020617;
+}
